@@ -14,8 +14,17 @@ ifneq ($(CYGWIN_BUILD),)
 
 include $(stepdir)/executable-targets.make
 
-POST_INSTALLS=$(wildcard post-*.sh)
-OUT_POST_INSTALLS=$(POST_INSTALLS:%=$(outdir)/%)
+POSTINSTALLS=$(wildcard postinstall*.sh)
+OUT_POSTINSTALLS=$(POSTINSTALLS:%=$(outdir)/%)
+
+POSTREMOVES=$(wildcard postremove*.sh)
+OUT_POSTREMOVES=$(POSTREMOVES:%=$(outdir)/%)
+
+foe:
+	echo pi: $(POSTINSTALLS)
+	echo opi: $(OUT_POSTINSTALLS)
+	echo pr: $(POSTREMOVES)
+	echo opr: $(OUT_POSTREMOVES)
 
 PROFILES=$(wildcard *-profile.sh) lilypond-profile.sh
 OUT_PROFILES=$(PROFILES:%=$(outdir)/%)
@@ -25,25 +34,28 @@ $(outdir)/%.sh: %.sh $(config_make)
 	cat $< | sed $(sed-atvariables) > $@
 	chmod 755 $@
 
-# Urg
+# Get profile from buildscripts
 $(outdir)/lilypond-profile.sh: $(outdir)/../$(depth)/buildscripts/$(outconfbase)/lilypond-profile
 	cp $< $@
 	chmod 755 $@
 
-default: $(OUT_POST_INSTALLS) $(OUT_PROFILES) $(OUTIN_FILES) 
+default: $(OUT_POSTINSTALLS) $(OUT_POSTREMOVES) $(OUT_PROFILES) $(OUTIN_FILES) 
 
-INSTALLATION_OUT_SUFFIXES=1 2
+INSTALLATION_OUT_SUFFIXES=1 2 # 3
 
 # Avoid collapsed directory constructs '//'
 etc=$(patsubst %/, %, $(dir $(prefix)))/etc
 INSTALLATION_DIR=$(etc)/postinstall
-INSTALLATION_FILES=$(OUT_POST_INSTALLS)
+INSTALLATION_FILES=$(OUT_POSTINSTALLS)
 
 INSTALLATION_OUT_DIR1=$(etc)/profile.d
 INSTALLATION_OUT_FILES1=$(OUT_PROFILES)
 
-INSTALLATION_OUT_DIR2=$(local_lilypond_datadir)/tex
-INSTALLATION_OUT_FILES2=$(shell kpsewhich geometry.sty)
+INSTALLATION_OUT_DIR2=$(etc)/postremove
+INSTALLATION_OUT_FILES2=$(OUT_POSTREMOVES)
+
+# INSTALLATION_OUT_DIR3=$(local_lilypond_datadir)/tex
+# INSTALLATION_OUT_FILES3=$(shell kpsewhich geometry.sty)
 
 endif
 
