@@ -1,5 +1,12 @@
 2003-09-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* GNUmakefile: Update.  Don not install geometry.sty.
+
+	* cygwin/postremove-lilypond.sh: 
+	* cygwin/postinstall-lilypond.sh: New file.
+
+	* cygwin/post-lilypond.sh: Remove.
+	
 	* cygwin/GNUmakefile: Add lily-wins.
 
 	* cygwin/lily-wins.py: New file.
